--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,54 @@
-# Google App Engine generated folder
-appengine-generated/
+# ========== Unity generated folders ==========
+[Ll]ibrary/
+[Tt]emp/
+[Oo]bj/
+[Bb]uild/
+[Bb]uilds/
+[Ll]ogs/
+UserSettings/
+MemoryCaptures/
+Recordings/
+
+# ========== IDE / Editor / Cache ==========
+.vs/
+.vscode/
+.idea/
+*.csproj
+*.unityproj
+*.sln
+*.suo
+*.user
+*.userprefs
+*.pidb
+*.booproj
+*.svd
+*.pdb
+*.mdb
+*.opendb
+*.VC.db
+
+# ========== Crash reports, logs, system files ==========
+sysinfo.txt
+crashlytics-build.properties
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+report.xml
+
+# ========== Build / Package outputs ==========
+*.apk
+*.aab
+*.unitypackage
+*.app
+
+# ========== Misc plugins, caches, tools ==========
+.gradle/
+ExportedObj/
+.consulo/
+
+# Rider / JetBrains plugin stuff (fixed)
+Assets/Plugins/Editor/JetBrains*
